# recall

./: .gitignore  BRIEF.md  CLAUDE.md  PLAN.md  README.md  STATUS.md  TASKS.md  package.json  pnpm-lock.yaml
migrations/: 001_initial_schema.sql  002_fts5.sql  003_vector_search.sql
ml-worker/: main.py  requirements.txt
ml-worker/ipc/: server.py
ml-worker/models/: manager.py
ml-worker/pipeline/: capture.py  diarizer.py  embedder.py  orchestrator.py  segmenter.py  summarizer.py  text_embedder.py  transcriber.py  vad.py
ml-worker/storage/: audio_store.py  db.py
ml-worker/tests/: conftest.py  test_segmenter.py  test_transcriber.py  test_vad.py
scripts/: dev.sh  setup.sh
src/: App.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/src/: config.rs  lib.rs
src-tauri/src/audio/: storage.rs
src-tauri/src/commands/: conversations.rs  mod.rs  recording.rs  search.rs  settings.rs  speakers.rs  storage.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/worker/: client.rs  events.rs  mod.rs  process.rs
src/api/: tauri.ts  types.ts
src/components/layout/: AppShell.tsx  RecordingStatusBar.tsx  Sidebar.tsx
src/components/onboarding/: ConsentStep.tsx  ModelDownloadStep.tsx  OnboardingFlow.tsx
src/components/search/: SearchBar.tsx  SearchResultItem.tsx  SearchView.tsx
src/components/settings/: ModelPanel.tsx  PerformancePanel.tsx  PrivacyPanel.tsx  (+2 more)
src/hooks/: useConversations.ts  useRecordingStatus.ts  useSearch.ts  useTauriEvents.ts
src/store/: index.ts
src/styles/: globals.css
(+9 files in other folders)
