[package]
name = "recall"
version = "0.1.0"
description = "Recall — local audio transcription and search"
authors = []
edition = "2021"

[lib]
name = "recall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
eventsource-stream = "0.2"
dirs-next = "2"

[dev-dependencies]
tempfile = "3"
